--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "Nexter",
+  "name": "nexter",
   "version": "1.0.0",
-  "description": "Nexter webpage",
+  "description": "grid css consepts",
   "main": "index.js",
   "scripts": {
-    "watch:sass": "node-sass sass/main.scss css/style.css -w",
-    "devserver": "live-server",
+    "watch:sass": "node-sass sass/main.scss css/style.css --watch",
+    "devserver": "live-server --browser=firefox",
     "start": "npm-run-all --parallel devserver watch:sass",
     "compile:sass": "node-sass sass/main.scss css/style.comp.css",
     "concat:css": "concat -o css/style.concat.css css/icon-font.css css/style.comp.css",
@@ -13,8 +13,16 @@
     "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
     "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css"
   },
-  "author": "Jonas",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/parul09singh/css-nexter.git"
+  },
+  "author": "parul",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/parul09singh/css-nexter/issues"
+  },
+  "homepage": "https://github.com/parul09singh/css-nexter#readme",
   "devDependencies": {
     "autoprefixer": "^9.8.6",
     "concat": "^1.0.3",
